# cybercmd

./: .dprint.json  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: clippy-matcher.json
.github/workflows/: ci.yml  release.yml
crates/common/: Cargo.toml
crates/common/src/: extensions.rs  file.rs  lib.rs  logger.rs  path.rs  paths.rs
crates/common/src/extensions/: base_path.rs  mod.rs
crates/cybercmd/: Cargo.toml
crates/cybercmd/src/: config.rs  lib.rs  paths.rs  util.rs
crates/cybercmd/src/config/: app_context.rs  argument_context.rs  game_config.rs  game_config_list.rs  logging.rs  mod.rs
crates/test/: Cargo.toml
crates/test/config/: broken.toml
crates/test/src/: main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: config.rs  dist.rs  install.rs  main.rs  scratch.rs  stage.rs  test.rs
crates/xtask/src/common/: config.rs
examples/: cybercmd.toml  redscript.toml  scc.toml  task.toml
r6/config/cybercmd/: broken.toml  cmd.toml
reference/: cmd.ini  cmd.toml
resources/: package.ps1
resources/config/: redscript.toml
resources/installer/: ModuleConfig.xml  info.xml
src/: config.rs  lib.rs  logger.rs  paths.rs  util.rs
xtask/: Cargo.toml
xtask/src/: config.rs  dist.rs  main.rs  test.rs
xtask/src/common/: config.rs
