[workspace]
members = ["crates/cybercmd", "crates/xtask", "crates/test", "crates/common"]
resolver = "2"

[workspace.package]
rust-version = "1.70"
edition = "2021"
license = "MIT"
authors = ["jac3km4", "AndASM"]

[workspace.dependencies]
common = { path = "crates/common", version = "0.0.0" }
test = { path = "crates/test", version = "0.0.0" }
xtask = { path = "crates/xtask", version = "0.0.0" }

anyhow = "1"
detour = { git = "https://github.com/veeenu/detour-rs", rev = "ec23632" }
flexi_logger = "0.25"
log = "0.4"
microtemplate = "1"
native-tls = "0.2"
normpath = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.7"
uniquote = "3"
ureq = { version = "2", default-features = false }
widestring = "1"
winapi = { version = "0.3" }
xshell = "0.2"
zip = { version = "0.6", default-features = false }
zip-extensions = { git = "https://github.com/AndASM/zip-extensions-rs.git", tag = "v0.6.3" }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
