[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
normpath = { workspace = true, features = ["uniquote"] }
reqwest = { workspace = true, features = ["blocking"] }
anyhow = { workspace = true }
zip = { workspace = true }
zip-extensions = { workspace = true }
thiserror = { workspace = true }
