cargo-features = ["per-package-target"]

[package]
name = "cybercmd"
version = "0.0.7"

authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow.workspace = true
common = { workspace = true, features = ["logger", "path"] }
detour.workspace = true
log.workspace = true
microtemplate.workspace = true
once_cell.workspace = true
serde.workspace = true
toml.workspace = true
uniquote.workspace = true
widestring.workspace = true
winapi = { workspace = true, features = ["minwindef", "winnt", "libloaderapi"] }

[lints]
workspace = true
